# fastapi-docker-poetry-heroku

./: Dockerfile  docker-compose.yml  readme.md
app/: main.py  pyproject.toml
