[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Audun Ask Blaker <audun@askblaker.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
